--- a/src/resources/styles.css
+++ b/src/resources/styles.css
@@ -1,11 +1,22 @@
 #hueRange {
-	border: none;
 	width: 100%;
-	height: 10px;
-	border-radius: 5px;
+	border-radius: 6px;
 	background: linear-gradient(
 		to right in hsl increasing hue,
-		hsl(0 100% 50%),
-		hsl(359, 100%, 50%)
+		hsl(0, 50%, 75%),
+		hsl(359, 50%, 75%)
 	);
+	outline: none;
+	margin-bottom: 10px;
+}
+
+#hueRange::-webkit-slider-runnable-track {
+	background: none;
+	height: 16px;
+}
+
+#hueRange::-webkit-slider-thumb {
+	margin-top: 0;
+	background-color: hsl(var(--main-hue), 50%, 75%);
+	border: white solid 2px;
 }
